# ccc

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  build_llvm.sh  group.txt
LLVM_Examples/: CMakeLists.txt  fac.cpp  main.cpp  max.cpp  struct.cpp
black_box_files/compiler_success_files/: fib_rec.c
black_box_files/lexer_failure_files/: lex.c
black_box_files/parser_failure_files/: declarations_ugly_inline.c  declarations_ugly_inline_2.c  declarations_ugly_inline_3.c  declarators.c  int_wo_ident.c  label1.c  label2.c  lex.c  missing_function_name.c  missing_param_name.c  parser_bad_number.c  parser_decalrators.c  some_seman.c  struct.c
black_box_files/parser_failure_files/.dep/: struct2.c
black_box_files/parser_success_files/: abstract.c  array_swap.c  declarators.c  parser_lonely_types.c  ret_func_ptr.c  struct.c  struct2.c  struct3.c  struct_func_ptr.c
black_box_files/parser_success_files/real/: parser_hello.c
black_box_files/pretty_printer_files/: .abstr_func.c  abst_func.c  abstr_func.c  ast_label.c
c4-master/src/: main.cpp
config/: debug.cfg  release.cfg  sanitize_addr.cfg  sanitize_mem.cfg
examples/: 1000kv2.c  100kbraces.c  100kconst.c  100kkw.c  100kmix.c  100kmixed.c  100kmixstring.c  100kmoreconst.c  100kmoreconsts.c  100knumber.c  100knumbers.c  100kops.c  10kops.c  backslashes.txt  comments.c  comments.txt  declarations.c  easy.c  error.c  error.txt  everything.c  everything.txt  extra.c  extra.txt  hello_world.c  hello_world.txt  lorem_ipsum.c  lorem_ipsum.txt  lots_of_real_code.c  lots_of_real_code.txt  sample.c  test.c  test.txt  transpose.c  transpose.txt
parser_failure_files/: parser_bad_number.c  parser_empty.c
pretty_printer_files/: ast_if_if_else_else.c
scripts/: ast.sh  benchmark.sh  clean.py  coverage.sh  extract_c4.sh  pre-commit  pre-push  reflex_lexer.l  reformat.sh  runtime.sh  stats.py  stress_test.sh  time_all_lexer.sh  time_all_lexer_old.sh  time_all_parser.sh
src/: CMakeLists.txt  main.cpp
src/ast/: CMakeLists.txt  ast_node.cpp  ast_node.hpp  constant.cpp  constant.hpp  declaration.cpp  declaration.hpp  expression.cpp  expression.hpp  ghost.hpp  graphviz.cpp  graphviz.hpp  graphviz_visitor.hpp  pretty_printer.cpp  raw_type.hpp  scope_handler.hpp  semantic_analysis.cpp  semantic_analysis.hpp  statement.cpp  statement.hpp  type_specifier.hpp  visitor.cpp
src/ast/visitor/: codegen.hpp  graphviz.hpp  pretty_printer.hpp  semantic_analysis.hpp
src/entry/: CMakeLists.txt  entry_point_handler.cpp  entry_point_handler.hpp
src/lexer/: CMakeLists.txt  fast_lexer.cpp  fast_lexer.hpp  lexer.cpp  lexer.hpp  lexer_exception.cpp  lexer_exception.hpp  reflex_lexer.cpp  reflex_lexer.hpp  reflex_lexer.l  token.cpp  token.hpp  token_type.cpp  token_type.hpp
src/parser/: ASTNode.cpp  ASTNode.hpp  CMakeLists.txt  ast_node.cpp  constant.hpp  declaration.cpp  expression.cpp  expression.hpp  expressions.cpp  expressions.hpp  fast_parser.cpp  fast_parser.hpp  statement.cpp  statement.hpp  statements.cpp  statements.hpp
src/parser/ast/: ast_node.hpp  declaration.hpp  expression.cpp  statement.hpp
src/reflex/: abslexer.h  absmatcher.h  boostmatcher.h  convert.cpp  convert.h  error.cpp  flexlexer.h  input.cpp  input.h  matcher.cpp  matcher.h  pattern.cpp  pattern.h  posix.cpp  stdmatcher.h  unicode.cpp  unicode.h  utf8.cpp
src/utils/: assert.hpp  location.hpp  macros.hpp  utils.hpp
test/: CMakeLists.txt  catch.hpp  first_test.cpp  lexer_big_test.cpp  lexer_keyword_test.cpp  lexer_punctuation_test.cpp  lexer_test.cpp  parser_big_test.cpp  parser_simple.cpp  parser_test.cpp
test/ast/: ast_test.cpp  parser_simple.cpp  prettyPrinter_entry_test.cpp  prettyPrinter_test.cpp
test/blackBox/: black_box.cpp
test/black_box/: black_box.cpp
test/codegen/: clang_test.cpp  codegen_test.cpp  test.c  test.ll
test/lexer/: first_test.cpp  lexer_big_test.cpp  lexer_keyword_test.cpp  lexer_punctuation_test.cpp  lexer_test.cpp
test/parser/: parse_declaration.cpp  parse_expression.cpp  parse_test_codes.cpp  parser_big_test.cpp  parser_simple.cpp  parser_test.cpp  test_codes.c4
test/prettyPrinter/: prettyPrinter_entry_test.cpp  prettyPrinter_test.cpp
test/pretty_printer/: pretty_printer_ast.cpp  pretty_printer_entry_test.cpp  pretty_printer_test.cpp
test/semantic/: nameAnalysis_test.cpp  semanticAnalysis_test.cpp  typeAnalysis_test.cpp
test/typeCheck/: typeCheck_test.cpp
